fix mask alignment in session-info

--- a/css/overlay.less
+++ b/css/overlay.less
@@ -161,7 +161,7 @@ html, body {
 			top: 0;
 			right: 0;
 			background: @gradient-darkblue-blue-saturated;
-			-webkit-mask: @curved-mask-inverted-mirrored top right;
+			-webkit-mask: @curved-mask-inverted-mirrored top left;
 		}
 	}
 
